# ROS-STERO-Elektron

./: CMakeLists.txt  README.md  package.xml
config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/.robots/: elektron_Laser_Tower-kinect.urdf.xacro  elektron_Laser_Tower-rgb.urdf.xacro
launch/: elektron_proj2.launch  elektron_world_1.launch  elektron_world_2.launch  elektron_world_5.launch  proj2.launch
scripts/: lab1.py  lab1_2.py  lab2.py  path_follower_srv.py  proj1.py  proj1_moves.py  proj1test1.csv
src/: proj2_server.cpp
srv/: PathFollower.srv  Proj1Moves.srv  Proj2.srv
worlds/: szablon.world  world_1.world  world_2.world  world_4.world  world_5.world  xd.world
worlds/world_1/: model.config  model.sdf
