<package>
<name>stero_mobile_init</name>
<version>1.2.4</version>
<description>uzupelnic</description>
<maintainer email="mahanas@outlook.com"> Marcin Hanas </maintainer>
<license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>elektron</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>

</package>
